// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blockquote 1`] = `
"\\\\begin{Quotation}
a quote
\\\\end{Quotation}



\\\\begin{Quotation}
a
multiline
quote
\\\\end{Quotation}



\\\\horizontalLine



\\\\begin{Quotation}
a quote
\\\\end{Quotation}



\\\\horizontalLine



\\\\begin{Quotation}
a
multiline
quote
\\\\end{Quotation}"
`;

exports[`code 1`] = `
"\\\\begin{CodeBlock}{python}
print('bla')
\\\\end{CodeBlock}



\\\\begin{CodeBlock}[][1,2]{python}
print('bla')
print('bla')
print('bla')
\\\\end{CodeBlock}



\\\\begin{CodeBlock}[][][10]{python}
print('bla')
print('bla')
print('bla')
\\\\end{CodeBlock}



\\\\begin{CodeBlock}[][1,2][10]{python}
print('bla')
print('bla')
print('bla')
\\\\end{CodeBlock}



\\\\begin{CodeBlock}[][2]{css}
.tmp {
  font-weight: bold;
}
\\\\end{CodeBlock}



\\\\begin{CodeBlock}[][1,3]{css}
.tmp {
  font-weight: bold;
}
\\\\end{CodeBlock}



\\\\begin{CodeBlock}{text}
a code without lang
\\\\end{CodeBlock}"
`;

exports[`code+caption 1`] = `
"\\\\begin{CodeBlock}{python}
print('bla')
\\\\end{CodeBlock}
\\\\captionof{listing}{With Source}



\\\\begin{CodeBlock}[][1,2]{python}
print('bla')
print('bla')
print('bla')
\\\\end{CodeBlock}
\\\\captionof{listing}{With Source}"
`;

exports[`code+reversed-hl 1`] = `
"\\\\begin{CodeBlock}[][2-3]{python}
print('bla')
print('bla')
print('bla')
\\\\end{CodeBlock}



\\\\begin{CodeBlock}[][1-2,3-4]{python}
print('bla')
print('bla')
print('bla')
print('bla')
\\\\end{CodeBlock}"
`;

exports[`codes in notes 1`] = `
"hello \\\\textsuperscript{\\\\footnotemark{footnote:1}}\\\\textsuperscript{\\\\footnotemark{footnote:2}}



\\\\footnotetext[1]{\\\\footnotemark{footnote:1} test

\\\\hyperref[appendix-1]{Annexe de code 1}}

\\\\footnotetext[2]{\\\\footnotemark{footnote:2} test

\\\\hyperref[appendix-3]{Annexe de code 3}}

\\\\begin{appendices}
\\\\levelOneTitle{\\\\label{appendix-1}Annexes 1}

\\\\begin{CodeBlock}{javascript}
console.log('hello')
\\\\end{CodeBlock}

\\\\levelOneTitle{\\\\label{appendix-3}Annexes 3}

\\\\begin{CodeBlock}{javascript}
console.log('hello')
\\\\end{CodeBlock}
\\\\end{appendices}"
`;

exports[`custom-blocks 1`] = `
"\\\\begin{Information}
info
\\\\end{Information}


\\\\begin{Warning}
warning
\\\\end{Warning}


\\\\begin{Spoiler}
secret
\\\\end{Spoiler}


\\\\begin{Spoiler}
imbricated spoilers

and another

and that's it
\\\\end{Spoiler}


\\\\begin{Spoiler}
imbricated spoilers

second level

second level too
\\\\end{Spoiler}


\\\\begin{Spoiler}
imbricated spoilers

second level

with text in between

second level too
\\\\end{Spoiler}


\\\\begin{Spoiler}
imbricated spoilers

\\\\begin{CodeBlock}{markdown}
and here is some code
\\\\end{CodeBlock}

second level
\\\\end{Spoiler}


\\\\begin{Spoiler}
do not over-flattenize

expected to be flattened

first level

\\\\begin{Question}
this remains a question
\\\\end{Question}
\\\\end{Spoiler}


\\\\begin{Spoiler}
flattenize children of children

\\\\begin{Question}
this remains a question

but the content in it is flattened to the question
\\\\end{Question}
\\\\end{Spoiler}


\\\\begin{Question}
question \\\\CodeInline{coded}
\\\\end{Question}


\\\\begin{Error}
\\\\textbf{error}
foo bar \\\\\\\\
baz
\\\\end{Error}"
`;

exports[`emoticon 1`] = `"foo \\\\smiley{langue.svg} bar \\\\smiley{smile.svg}"`;

exports[`figure+caption 1`] = `
"\\\\begin{Quotation}[With Source]
a
multiline
quote
\\\\end{Quotation}"
`;

exports[`footnotes 1`] = `
"\\\\levelOneTitle{mytitle A\\\\textsuperscript{\\\\footnotemark{footnote:1}}}


\\\\footnotetext[1]{\\\\footnotemark{footnote:1} reference in title}

\\\\levelOneTitle{mytitle B\\\\textsuperscript{\\\\footnotemark{footnote:2}}\\\\protect\\\\footnotetext[2]{\\\\footnotemark{footnote:2} footnoterawhead inner}}


\\\\levelOneTitle{myti\\\\textit{tle C\\\\textsuperscript{\\\\footnotemark{footnote:3}}\\\\protect\\\\footnotetext[3]{\\\\footnotemark{footnote:3} foo inner}}}


a paragraph\\\\textsuperscript{\\\\footnotemark{footnote:4}}\\\\footnotetext[4]{\\\\footnotemark{footnote:4} footnoteRawPar inner}"
`;

exports[`heading 1`] = `
"\\\\levelOneTitle{first level title}


\\\\levelTwoTitle{second level title}


\\\\levelThreeTitle{third level title}


\\\\levelFourTitle{fourth level title}


\\\\levelFiveTitle{fifth level title}


\\\\levelSixTitle{sixth level title}


\\\\levelOneTitle{a \\\\textbackslash{} b}


\\\\levelOneTitle{a \\\\} b}


\\\\levelOneTitle{a \\\\} \\\\textbackslash{} b}


\\\\levelOneTitle{a \\\\} b}"
`;

exports[`html nodes 1`] = `
"\\\\levelOneTitle{foo}


\\\\textbf{something <a> else}"
`;

exports[`inline-code 1`] = `
"a paragraph \\\\CodeInline{with inline code}.



\\\\CodeInline{a
multiline
inlinecode}



\\\\CodeInline{a code with \\\\textbackslash{} }



\\\\CodeInline{a \\\\textbackslash{}text in \\\\textbackslash{}LaTeX \\\\textbackslash{}\\\\textbackslash{}}"
`;

exports[`link 1`] = `
"\\\\externalLink{an external link}{https://wikipedia.com}



\\\\externalLink{an internal link}{http://zestedesavoir.com/forums}



\\\\externalLink{an \\\\CodeInline{external} link}{https://wikipedia.com}"
`;

exports[`link with special characters 1`] = `"\\\\externalLink{foo}{http://example.com?a=b\\\\%c\\\\textasciicircum{}\\\\{\\\\}\\\\#foo}"`;

exports[`list 1`] = `
"\\\\begin{itemize}
\\\\item\\\\relax an
\\\\item\\\\relax \\\\textbf{unordered}
\\\\item\\\\relax list
\\\\end{itemize}


\\\\begin{enumerate}
\\\\item\\\\relax an
\\\\item\\\\relax \\\\CodeInline{ordered}
\\\\item\\\\relax list
\\\\end{enumerate}"
`;

exports[`math 1`] = `
"A sentence ($S$) with \\\\textit{italic} and inline math ($C_L$) and $$b$$ another.



\\\\[ L = \\\\frac{1}{2} \\\\rho v^2 S C_L \\\\]



hehe"
`;

exports[`mix-1 1`] = `
"(for convenience,   are replaced with simple single spaces in the tests)



\\\\levelOneTitle{first 1}


foo \\\\\\\\
bar



Disrupt \\\\sout{asymmetrical} unicorn, pok pok kale chips umami selfies gastropub food truck flannel. Blue \\\\textbf{bottle craft} beer hexagon artisan. Chia gochujang crucifix, \\\\textsuperscript{ready} \\\\textsuperscript{made} hammock \\\\textit{blog succulents} sriracha raw denim scenester cray typewriter fashion axe \\\\textsubscript{art} \\\\textit{party}. Schlitz tacos tilde intelligentsia, unicorn fixie adaptogen beard 8-bit street \\\\textsubscript{art} typewriter.



\\\\levelTwoTitle{\\\\textit{second} 1}


\\\\textbf{Literally selfies tbh lo-fi. Actually health goth ennui, brooklyn retro polaroid sriracha. Kogi live-edge mixtape marfa street \\\\textsubscript{art} synth. Godard synth truffaut selfies, vape fanny \\\\sout{pack} subway tile. Stumptown af pabst, try-hard fam ethical actually four dollar toast. Microdosing kogi brooklyn, locavore jianbing etsy sartorial \\\\textit{YOLO}. Williamsburg salvia photo booth \\\\textsuperscript{readymade} listicle man braid.}



\\\\horizontalLine



\\\\begin{Quotation}[Guru]
Marfa pickled helvetica put a bird on it hot chicken williamsburg.
Edison bulb asymmetrical \\\\CodeInline{keffiyeh} schlitz iceland put a bird on it hoodie affogato.

Tofu tote bag distillery viral knausgaard, health goth asymmetrical.
\\\\end{Quotation}



Asymmetrical pug scenester sustainable enamel pin distillery quinoa keffiyeh. Flannel humblebrag PBR\\\\&B polaroid banh mi wolf. Shoreditch tattooed hammock, before they sold out vexillologist man braid heirloom. Activated charcoal craft beer cloud bread meh biodiesel pabst.



\\\\levelThreeTitle{\\\\sout{third} 1}


Art party keytar godard iceland neutra cronut. Austin \\\\textsuperscript{readymade} semiotics, edison bulb cloud bread adaptogen blue bottle jean shorts DIY. Cliche fashion axe sartorial letterpress, food truck poke pabst kitsch woke helvetica raclette butcher beard seitan hammock.



\\\\CodeInline{foo
bar}



\\\\begin{Quotation}
\\\\CodeInline{fo\\\\textbackslash{}o
bar}
\\\\end{Quotation}



Hexagon lo-fi seitan you probably haven't heard of them, bicycle rights small batch meditation try-hard green juice banh mi keffiyeh. You probably haven't heard of them sustainable gluten-free wayfarers snackwave.



\\\\levelThreeTitle{third 2}


\\\\levelFourTitle{\\\\sout{fo}u\\\\textbf{r}t\\\\textit{h} \\\\textit{1}}


Mumblecore kombucha offal, health goth next level before they sold out gluten-free chicharrones keffiyeh. Mumblecore kickstarter hoodie fixie keffiyeh. Microdosing lo-fi taiyaki irony pok pok. Banjo brooklyn umami succulents flexitarian. Swag sartorial scenester synth viral.



\\\\levelFiveTitle{fifth 1}


Banjo bespoke subway tile, street \\\\textsubscript{a\\\\textit{r}}\\\\textsuperscript{t} drinking vinegar offal franzen. Pour-over green juice vaporware kale chips. Meggings cronut affogato PBR\\\\&B, \\\\textsubscript{art} party unicorn dreamcatcher schlitz yuccie mixtape 90's thundercats air plant. Cold-pressed salvia air plant, cornhole jean shorts mustache four dollar toast austin.



\\\\levelThreeTitle{third 3}


Meditation heirloom chicharrones, sartorial man braid hot chicken sustainable. Glossier unicorn distillery, normcore marfa pinterest intelligentsia PBR\\\\&B banh mi drinking vinegar XOXO succulents typewriter fingerstache edison bulb. Meditation ethical cronut glossier cliche kickstarter.



\\\\levelFourTitle{fourth 2}


Venmo bushwick food truck chartreuse fam. Everyday carry gastropub glossier, cold-pressed salvia migas keytar. Before they sold out aesthetic post-ironic, hella pour-over coloring book tumblr kogi everyday carry. Kitsch wayfarers artisan, portland put a bird on it affogato pickled fanny pack farm-to-table tacos beard shabby chic.



\\\\levelFourTitle{fourth 3}


Chambray intelligentsia vape listicle. Pok pok snackwave cronut retro hot chicken, trust fund master cleanse keytar forage dreamcatcher. Taiyaki actually deep v, godard small batch irony lumbersexual unicorn cardigan af. Irony lumbersexual salvia, pitchfork fam snackwave man bun. Kitsch jianbing intelligentsia freegan, waistcoat raw denim cloud bread vice cray etsy listicle skateboard jean shorts.



\\\\levelFiveTitle{fifth 2}


Asymmetrical normcore portland, vaporware viral tote bag DIY slow-carb kogi fanny pack. Keffiyeh ennui church-key, irony VHS man bun edison bulb listicle cloud bread try-hard cred lumbersexual lo-fi glossier.



\\\\levelOneTitle{first 2}


\\\\levelTwoTitle{second 2}


\\\\levelFiveTitle{fifth 3}


Messenger bag locavore swag raclette brunch whatever, portland food truck. PBR\\\\&B cred mlkshk, poke letterpress waistcoat celiac. La croix letterpress forage keffiyeh."
`;

exports[`mix-2 1`] = `
"(for convenience,   are replaced with simple single spaces in the tests)



\\\\levelOneTitle{first 1}


\\\\begin{Quotation}[Quotation Source]
Code inside quote

\\\\begin{CodeBlock}{python}
print('bla')
\\\\end{CodeBlock}
\\\\captionof{listing}{code source}
\\\\end{Quotation}



\\\\begin{CodeBlock}{python}
print('bla')
\\\\end{CodeBlock}
\\\\captionof{listing}{First \\\\keys{CTRL}+\\\\keys{S}}



Code: Second



\\\\begin{CodeBlock}{python}
print('code without caption')
\\\\end{CodeBlock}"
`;

exports[`mix-3 1`] = `
"\\\\levelOneTitle{right-aligned list}



{\\\\raggedleft
\\\\begin{itemize}
\\\\item\\\\relax item
\\\\item\\\\relax item
\\\\end{itemize}
}


\\\\levelOneTitle{centered list}



{\\\\centering \\\\begin{itemize}
\\\\item\\\\relax item
\\\\item\\\\relax item
\\\\item\\\\relax item
\\\\end{itemize}
}


\\\\levelOneTitle{left list}




\\\\begin{itemize}
\\\\item\\\\relax item
\\\\item\\\\relax item
\\\\item\\\\relax item
\\\\end{itemize}"
`;

exports[`mix-4 1`] = `
"\\\\begin{longtabu}{|m{\\\\dimexpr(\\\\linewidth) / 3 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 3 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 3 - 2 * \\\\tabcolsep}|} \\\\hline
\\\\rowfont[l]{\\\\bfseries}
Sub & Headings & \\\\abbr{ABBR}{abbreviation} \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
\\\\multirow{2}{*}{\\\\parbox{\\\\linewidth}{cell \\\\endgraf spans \\\\endgraf rows}} & \\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 3 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{column spanning}} \\\\\\\\ \\\\cline{2-3}
 & normal & cell \\\\\\\\ \\\\hline
multi \\\\endgraf line \\\\endgraf \\\\endgraf cells \\\\endgraf too & \\\\multicolumn{2}{|m{\\\\dimexpr(\\\\linewidth) * 2 / 3 - 2 * \\\\tabcolsep}|}{\\\\parbox{\\\\linewidth}{cells can be \\\\endgraf \\\\textit{formatted} \\\\endgraf \\\\textbf{paragraphs}}} \\\\\\\\ \\\\hline
\\\\end{longtabu}
\\\\captionof{table}{The new table \\\\abbr{ABBR}{abbreviation} \\\\textsuperscript{\\\\footnotemark{footnote:1}} with \\\\keys{CTRL} + \\\\keys{S}}



\\\\footnotetext[1]{\\\\footnotemark{footnote:1} a foot}

\\\\begin{longtabu}{|m{\\\\dimexpr(\\\\linewidth) / 2 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 2 - 2 * \\\\tabcolsep}|} \\\\hline
\\\\rowfont[l]{\\\\bfseries}
title & image \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
space & \\\\image{https://i.ytimg.com/vi/lt0WQ8JzLz4/maxresdefault.jpg}[space] \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu}{|m{\\\\dimexpr(\\\\linewidth) / 2 - 2 * \\\\tabcolsep}|m{\\\\dimexpr(\\\\linewidth) / 2 - 2 * \\\\tabcolsep}|} \\\\hline
\\\\rowfont[l]{\\\\bfseries}
title & code \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
inline & \\\\CodeInline{inline} br \\\\endgraf \\\\CodeInline{inline} \\\\\\\\ \\\\hline
block & \\\\hyperref[appendix-1]{Annexe de code 1} \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{appendices}
\\\\levelOneTitle{\\\\label{appendix-1}Annexes 1}

\\\\begin{CodeBlock}{python}
print('bla')
\\\\end{CodeBlock}
\\\\end{appendices}"
`;

exports[`mix-5 1`] = `
"\\\\image{http://www.numerama.com/content/uploads/2016/07/espace.jpg}[espace\\\\textsuperscript{\\\\footnotemark{footnote:1}}]


\\\\footnotetext[1]{\\\\footnotemark{footnote:1} Two things are infinite: the universe and human stupidity.}"
`;

exports[`mix-6 1`] = `
"\\\\iframe{https://www.youtube.com/embed/8TQIvdFl4aU?feature=oembed}[Video][a caption]

\\\\iframe{https://www.youtube.com/embed/8TQIvdFl4aU?feature=oembed}[Video][]

no caption"
`;

exports[`paragraph 1`] = `
"\\\\levelOneTitle{first 1}


Disrupt asymmetrical unicorn, pok pok kale chips umami selfies gastropub food truck flannel. Blue bottle craft beer hexagon artisan. Chia gochujang crucifix, readymade hammock blog succulents sriracha raw denim scenester cray typewriter fashion axe art party. Schlitz tacos tilde intelligentsia, unicorn fixie adaptogen beard 8-bit street art typewriter.



\\\\levelTwoTitle{second 1}


Literally selfies tbh lo-fi. Actually health goth ennui, brooklyn retro polaroid sriracha. Kogi live-edge mixtape marfa street art synth. Godard synth truffaut selfies, vape fanny pack subway tile. Stumptown af pabst, try-hard fam ethical actually four dollar toast. Microdosing kogi brooklyn, locavore jianbing etsy sartorial YOLO. Williamsburg salvia photo booth readymade listicle man braid.



Marfa pickled helvetica put a bird on it hot chicken williamsburg. Edison bulb asymmetrical keffiyeh schlitz iceland put a bird on it hoodie affogato. Tofu tote bag distillery viral knausgaard, health goth asymmetrical.



Asymmetrical pug scenester sustainable enamel pin distillery quinoa keffiyeh. Flannel humblebrag PBR\\\\&B polaroid banh mi wolf. Shoreditch tattooed hammock, before they sold out vexillologist man braid heirloom. Activated charcoal craft beer cloud bread meh biodiesel pabst.



\\\\levelThreeTitle{third 1}


Art party keytar godard iceland neutra cronut. Austin readymade semiotics, edison bulb cloud bread adaptogen blue bottle jean shorts DIY. Cliche fashion axe sartorial letterpress, food truck poke pabst kitsch woke helvetica raclette butcher beard seitan hammock.



Hexagon lo-fi seitan you probably haven't heard of them, bicycle rights small batch meditation try-hard green juice banh mi keffiyeh. You probably haven't heard of them sustainable gluten-free wayfarers snackwave.



\\\\levelThreeTitle{third 2}


\\\\levelFourTitle{fourth 1}


Mumblecore kombucha offal, health goth next level before they sold out gluten-free chicharrones keffiyeh. Mumblecore kickstarter hoodie fixie keffiyeh. Microdosing lo-fi taiyaki irony pok pok. Banjo brooklyn umami succulents flexitarian. Swag sartorial scenester synth viral.



\\\\levelFiveTitle{fifth 1}


Banjo bespoke subway tile, street art drinking vinegar offal franzen. Pour-over green juice vaporware kale chips. Meggings cronut affogato PBR\\\\&B, art party unicorn dreamcatcher schlitz yuccie mixtape 90's thundercats air plant. Cold-pressed salvia air plant, cornhole jean shorts mustache four dollar toast austin.



\\\\levelThreeTitle{third 3}


Meditation heirloom chicharrones, sartorial man braid hot chicken sustainable. Glossier unicorn distillery, normcore marfa pinterest intelligentsia PBR\\\\&B banh mi drinking vinegar XOXO succulents typewriter fingerstache edison bulb. Meditation ethical cronut glossier cliche kickstarter.



\\\\levelFourTitle{fourth 2}


Venmo bushwick food truck chartreuse fam. Everyday carry gastropub glossier, cold-pressed salvia migas keytar. Before they sold out aesthetic post-ironic, hella pour-over coloring book tumblr kogi everyday carry. Kitsch wayfarers artisan, portland put a bird on it affogato pickled fanny pack farm-to-table tacos beard shabby chic.



\\\\levelFourTitle{fourth 3}


Chambray intelligentsia vape listicle. Pok pok snackwave cronut retro hot chicken, trust fund master cleanse keytar forage dreamcatcher. Taiyaki actually deep v, godard small batch irony lumbersexual unicorn cardigan af. Irony lumbersexual salvia, pitchfork fam snackwave man bun. Kitsch jianbing intelligentsia freegan, waistcoat raw denim cloud bread vice cray etsy listicle skateboard jean shorts.



\\\\levelFiveTitle{fifth 2}


Asymmetrical normcore portland, vaporware viral tote bag DIY slow-carb kogi fanny pack. Keffiyeh ennui church-key, irony VHS man bun edison bulb listicle cloud bread try-hard cred lumbersexual lo-fi glossier.



\\\\levelOneTitle{first 2}


\\\\levelTwoTitle{second 2}


\\\\levelFiveTitle{fifth 3}


Messenger bag locavore swag raclette brunch whatever, portland food truck. PBR\\\\&B cred mlkshk, poke letterpress waistcoat celiac. La croix letterpress forage keffiyeh."
`;

exports[`ping 1`] = `"Hello \\\\ping{you} and \\\\ping{you_too}, and \\\\ping{also you}"`;

exports[`quizz with answers 1`] = `
"\\\\begin{Neutral}[{{question}}]
\\\\begin{itemize}
\\\\item\\\\relax bad answer
\\\\item\\\\relax good answer
\\\\item\\\\relax other bad answer
\\\\end{itemize}
\\\\end{Neutral}


\\\\begin{Spoiler}[{{Correction}}]
\\\\begin{itemize}
\\\\item[$\\\\square$]\\\\relax bad answer
\\\\item[$\\\\boxtimes$]\\\\relax good answer
\\\\item[$\\\\square$]\\\\relax other bad answer
\\\\end{itemize}
the good answer is \\"good answer\\" as it better matches the philosophy
of what good is for answers
\\\\end{Spoiler}"
`;

exports[`regression: code block without language 1`] = `
"\\\\begin{CodeBlock}{text}
a
\\\\end{CodeBlock}"
`;

exports[`table 1`] = `
"\\\\begin{longtabu} spread 0pt {|X[-1]|X[-1]|} \\\\hline
\\\\rowfont[l]{\\\\bfseries}
1 & 2 \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
1 & 2 \\\\\\\\ \\\\hline
1 & 2 \\\\\\\\ \\\\hline
1 & 2 \\\\\\\\ \\\\hline
\\\\end{longtabu}


\\\\begin{longtabu} spread 0pt {|X[-1]|X[-1]|X[-1]|} \\\\hline
\\\\rowfont[l]{\\\\bfseries}
1 & 2 & 3 \\\\\\\\ \\\\hline
\\\\rowfont[l]{}
1 & 2 \\\\\\\\ \\\\hline
1 & 2 & 3 \\\\\\\\ \\\\hline
1 & 2 & 3 \\\\\\\\ \\\\hline
\\\\end{longtabu}"
`;
